Removing unused files

--- a/popup.html
+++ b/popup.html
@@ -135,7 +135,7 @@
     </select>
   </header>
   <section><ol> </ol></section>
-  <script src="lib/jquery.min.js"></script>
-  <script src="lib/popup.js"></script>
+  <script src="/lib/jquery.min.js"></script>
+  <script src="/lib/popup.js"></script>
 </body>
 </html>
