Adding 2 new playlists
prince, and sexiest songs

--- a/popup.html
+++ b/popup.html
@@ -118,11 +118,15 @@
       <option value="http://pitchfork.com/rss/reviews/best/reissues/">&nbsp;&nbsp;Pitchfork Media | Best New Reissues</option>
 
       <option disabled="disabled">ROLLING STONE LISTS :::::::::::::::::::::::::</option>
+      <option value="custom-rs-summersongs-1970s">&nbsp;&nbsp;Rolling Stone | 1970s | 20 Best Summer Songs</option>
       <option value="custom-rs-pop-1984">&nbsp;&nbsp;Rolling Stone | 1984 | 20 Best Songs</option>
+      <option value="custom-rs-best-2000s">&nbsp;&nbsp;Rolling Stone | 2000s | 20 Best Songs</option>
       <option value="custom-rs-country-saddest">&nbsp;&nbsp;Rolling Stone | 12 Saddest Country Songs</option>
       <option value="custom-rs-hiphop-greatest">&nbsp;&nbsp;Rolling Stone | 10 Greatest Hip-Hop Songs</option>
-      <option value="custom-rs-best-2000s">&nbsp;&nbsp;Rolling Stone | 2000s | 20 Best Songs</option>
-      <option value="custom-rs-summersongs-1970s">&nbsp;&nbsp;Rolling Stone | 1970s | 20 Best Summer Songs</option>
+      <option value="custom-rs-sexiest">&nbsp;&nbsp;Rolling Stone | 10 Sexiest Songs</option>
+
+      <option disabled="disabled">UNIQUE PLAYLISTS :::::::::::::::::::::::::</option>
+      <option value="custom-playlist-prince">&nbsp;&nbsp;Unique Playlist | Prince's &lsquo;New Girl&rsquo; Party Mix</option><!-- http://boingboing.net/2016/04/25/listen-to-princes-personal-p.html -->
 
     </select>
   </header>
