--- a/popup.html
+++ b/popup.html
@@ -5,7 +5,7 @@
   <meta name="author" content="Mike Rottina">
   <link href="http://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet" type="text/css">
   <link href="/lib/popup.css" rel="stylesheet" type="text/css">
-    <script src="/lib/jquery.min.js" defer></script>
+  <script src="/lib/jquery.min.js" defer></script>
   <script src="/lib/popup.js" defer></script>
 </head>
 <body>
@@ -27,6 +27,8 @@
       <option value="http://www.billboard.com/rss/charts/hot-100">&nbsp;&nbsp;Billboard | Hot 100</option>
       <option value="http://www.billboard.com/rss/charts/twitter-top-tracks">&nbsp;&nbsp;Billboard | Twitter Top Tracks</option>
 
+      <option value="custom-bilboard-1966">&nbsp;&nbsp;Billboard | Hot 100 | #1 songs | 1966</option>
+      <option value="custom-bilboard-1967">&nbsp;&nbsp;Billboard | Hot 100 | #1 songs | 1967</option>
       <option value="custom-bilboard-1968">&nbsp;&nbsp;Billboard | Hot 100 | #1 songs | 1968</option>
       <option value="custom-bilboard-1969">&nbsp;&nbsp;Billboard | Hot 100 | #1 songs | 1969</option>
       <option value="custom-bilboard-1970">&nbsp;&nbsp;Billboard | Hot 100 | #1 songs | 1970</option>
