- Adding ABC Jazz feed - Minor tweaks

--- a/popup.html
+++ b/popup.html
@@ -23,15 +23,17 @@
       <option value="http://www.amazon.com/gp/rss/new-releases/music/ref=zg_bsnr_music_rsslink">&nbsp;&nbsp;Amazon | New Releases</option>
 
       <option disabled="disabled">WEB FAVES :::::::::::::::::::::::::::::::::::::::::</option>
+      <option value="http://www.abc.net.au/jazz/xml/ABC%20JazzJustPlayedRSS.xml">&nbsp;&nbsp;ABC Jazz Party Mix</option>
       <option value="http://np.absoluteradio.co.uk/played/abr.rss">&nbsp;&nbsp;Absolute Radio UK | Recently Played</option>
       <option value="http://hypem.com/feed/spy/">&nbsp;&nbsp;Hype Machine | Global Spy</option>
       <option value="http://hypem.com/feed/latest/fresh">&nbsp;&nbsp;Hype Machine | Latest Freshness</option>
       <option value="http://hypem.com/feed/twitter/popular">&nbsp;&nbsp;Hype Machine | Popular on Twitter</option>
       <option value="http://hypem.com/feed/popular/3day/1/feed.xml">&nbsp;&nbsp;Hype Machine | Popular on Blogs</option>
       <option value="http://feeds.feedburner.com/indieshuffle?format=xml">&nbsp;&nbsp;Indie Shuffle | Singles</option>
-      <option value="http://pitchfork.com/rss/reviews/best/tracks/">&nbsp;&nbsp;Pitchfork Media | Best New Tracks</option>
+      <!-- <option value="http://pitchfork.com/rss/reviews/best/tracks/">&nbsp;&nbsp;Pitchfork Media | Best New Tracks</option> -->
       <option value="http://pitchfork.com/rss/reviews/best/reissues/">&nbsp;&nbsp;Pitchfork Media | Best New Reissues</option>
       <option value="custom-playlist-prince">&nbsp;&nbsp;Unique Playlist | Prince's &lsquo;New Girl&rsquo; Party Mix</option><!-- http://boingboing.net/2016/04/25/listen-to-princes-personal-p.html -->
+
 
       <option disabled="disabled">BILLBOARD :::::::::::::::::::::::::::::::::::::::::</option>
       <option value="http://www.billboard.com/rss/charts/social-50" selected>&nbsp;&nbsp;Billboard | Social 25</option>
