* Fixing controls UI * jQuery update * Add 2018 singles

--- a/popup.html
+++ b/popup.html
@@ -25,7 +25,7 @@
       <option disabled="disabled">WEB FAVES :::::::::::::::::::::::::::::::::::::::::</option>
       <option value="http://www.abc.net.au/jazz/xml/ABC%20JazzJustPlayedRSS.xml">&nbsp;&nbsp;ABC Jazz Party Mix</option>
       <option value="http://np.absoluteradio.co.uk/played/abr.rss">&nbsp;&nbsp;Absolute Radio UK | Recently Played</option>
-      <option value="http://feeds.feedburner.com/indieshuffle?format=xml">&nbsp;&nbsp;Indie Shuffle | Singles</option>
+      <option value="https://feeds.feedburner.com/indieshuffle?format=xml">&nbsp;&nbsp;Indie Shuffle | Singles</option>
       <option value="https://pitchfork.com/rss/reviews/best/tracks/">&nbsp;&nbsp;Pitchfork Media | Best New Tracks</option>
       <option value="https://pitchfork.com/rss/reviews/best/reissues/">&nbsp;&nbsp;Pitchfork Media | Best New Reissues</option>
       <option value="custom-playlist-prince">&nbsp;&nbsp;Unique Playlist | Prince's &lsquo;New Girl&rsquo; Party Mix</option><!-- https://boingboing.net/2016/04/25/listen-to-princes-personal-p.html -->
@@ -39,59 +39,59 @@
       <option value="custom-rs-sexiest">&nbsp;&nbsp;Rolling Stone | 10 Sexiest Songs</option>
 
       <option disabled="disabled">BILLBOARD HOT 100 :::::::::::::::::::::::::::</option>
-      <option value="custom-bilboard-2018">&nbsp;&nbsp;Billboard | Hot 100 | #1 songs | 2018</option>
-      <option value="custom-bilboard-2017">&nbsp;&nbsp;Billboard | Hot 100 | #1 songs | 2017</option>
-      <option value="custom-bilboard-2016">&nbsp;&nbsp;Billboard | Hot 100 | #1 songs | 2016</option>
-      <option value="custom-bilboard-2015">&nbsp;&nbsp;Billboard | Hot 100 | #1 songs | 2015</option>
-      <option value="custom-bilboard-2014">&nbsp;&nbsp;Billboard | Hot 100 | #1 songs | 2014</option>
-      <option value="custom-bilboard-2013">&nbsp;&nbsp;Billboard | Hot 100 | #1 songs | 2013</option>
-      <option value="custom-bilboard-2012">&nbsp;&nbsp;Billboard | Hot 100 | #1 songs | 2012</option>
-      <option value="custom-bilboard-2011">&nbsp;&nbsp;Billboard | Hot 100 | #1 songs | 2011</option>
-      <option value="custom-bilboard-2010">&nbsp;&nbsp;Billboard | Hot 100 | #1 songs | 2010</option>
-      <option value="custom-bilboard-2009">&nbsp;&nbsp;Billboard | Hot 100 | #1 songs | 2009</option>
-      <option value="custom-bilboard-2008">&nbsp;&nbsp;Billboard | Hot 100 | #1 songs | 2008</option>
-      <option value="custom-bilboard-2007">&nbsp;&nbsp;Billboard | Hot 100 | #1 songs | 2007</option>
-      <option value="custom-bilboard-2006">&nbsp;&nbsp;Billboard | Hot 100 | #1 songs | 2006</option>
-      <option value="custom-bilboard-2005">&nbsp;&nbsp;Billboard | Hot 100 | #1 songs | 2005</option>
-      <option value="custom-bilboard-2004">&nbsp;&nbsp;Billboard | Hot 100 | #1 songs | 2004</option>
-      <option value="custom-bilboard-2003">&nbsp;&nbsp;Billboard | Hot 100 | #1 songs | 2003</option>
-      <option value="custom-bilboard-2002">&nbsp;&nbsp;Billboard | Hot 100 | #1 songs | 2002</option>
-      <option value="custom-bilboard-2001">&nbsp;&nbsp;Billboard | Hot 100 | #1 songs | 2001</option>
-      <option value="custom-bilboard-2000">&nbsp;&nbsp;Billboard | Hot 100 | #1 songs | 2000</option>
-      <option value="custom-bilboard-1999">&nbsp;&nbsp;Billboard | Hot 100 | #1 songs | 1999</option>
-      <option value="custom-bilboard-1998">&nbsp;&nbsp;Billboard | Hot 100 | #1 songs | 1998</option>
-      <option value="custom-bilboard-1997">&nbsp;&nbsp;Billboard | Hot 100 | #1 songs | 1997</option>
-      <option value="custom-bilboard-1996">&nbsp;&nbsp;Billboard | Hot 100 | #1 songs | 1996</option>
-      <option value="custom-bilboard-1995">&nbsp;&nbsp;Billboard | Hot 100 | #1 songs | 1995</option>
-      <option value="custom-bilboard-1994">&nbsp;&nbsp;Billboard | Hot 100 | #1 songs | 1994</option>
-      <option value="custom-bilboard-1993">&nbsp;&nbsp;Billboard | Hot 100 | #1 songs | 1993</option>
-      <option value="custom-bilboard-1992">&nbsp;&nbsp;Billboard | Hot 100 | #1 songs | 1992</option>
-      <option value="custom-bilboard-1991">&nbsp;&nbsp;Billboard | Hot 100 | #1 songs | 1991</option>
-      <option value="custom-bilboard-1990">&nbsp;&nbsp;Billboard | Hot 100 | #1 songs | 1990</option>
-      <option value="custom-bilboard-1989">&nbsp;&nbsp;Billboard | Hot 100 | #1 songs | 1989</option>
-      <option value="custom-bilboard-1988">&nbsp;&nbsp;Billboard | Hot 100 | #1 songs | 1988</option>
-      <option value="custom-bilboard-1987">&nbsp;&nbsp;Billboard | Hot 100 | #1 songs | 1987</option>
-      <option value="custom-bilboard-1986">&nbsp;&nbsp;Billboard | Hot 100 | #1 songs | 1986</option>
-      <option value="custom-bilboard-1985">&nbsp;&nbsp;Billboard | Hot 100 | #1 songs | 1985</option>
-      <option value="custom-bilboard-1984">&nbsp;&nbsp;Billboard | Hot 100 | #1 songs | 1984</option>
-      <option value="custom-bilboard-1983">&nbsp;&nbsp;Billboard | Hot 100 | #1 songs | 1983</option>
-      <option value="custom-bilboard-1982">&nbsp;&nbsp;Billboard | Hot 100 | #1 songs | 1982</option>
-      <option value="custom-bilboard-1981">&nbsp;&nbsp;Billboard | Hot 100 | #1 songs | 1981</option>
-      <option value="custom-bilboard-1980">&nbsp;&nbsp;Billboard | Hot 100 | #1 songs | 1980</option>
-      <option value="custom-bilboard-1979">&nbsp;&nbsp;Billboard | Hot 100 | #1 songs | 1979</option>
-      <option value="custom-bilboard-1978">&nbsp;&nbsp;Billboard | Hot 100 | #1 songs | 1978</option>
-      <option value="custom-bilboard-1977">&nbsp;&nbsp;Billboard | Hot 100 | #1 songs | 1977</option>
-      <option value="custom-bilboard-1976">&nbsp;&nbsp;Billboard | Hot 100 | #1 songs | 1976</option>
-      <option value="custom-bilboard-1975">&nbsp;&nbsp;Billboard | Hot 100 | #1 songs | 1975</option>
-      <option value="custom-bilboard-1974">&nbsp;&nbsp;Billboard | Hot 100 | #1 songs | 1974</option>
-      <option value="custom-bilboard-1973">&nbsp;&nbsp;Billboard | Hot 100 | #1 songs | 1973</option>
-      <option value="custom-bilboard-1972">&nbsp;&nbsp;Billboard | Hot 100 | #1 songs | 1972</option>
-      <option value="custom-bilboard-1971">&nbsp;&nbsp;Billboard | Hot 100 | #1 songs | 1971</option>
-      <option value="custom-bilboard-1970">&nbsp;&nbsp;Billboard | Hot 100 | #1 songs | 1970</option>
-      <option value="custom-bilboard-1969">&nbsp;&nbsp;Billboard | Hot 100 | #1 songs | 1969</option>
-      <option value="custom-bilboard-1968">&nbsp;&nbsp;Billboard | Hot 100 | #1 songs | 1968</option>
-      <option value="custom-bilboard-1967">&nbsp;&nbsp;Billboard | Hot 100 | #1 songs | 1967</option>
-      <option value="custom-bilboard-1966">&nbsp;&nbsp;Billboard | Hot 100 | #1 songs | 1966</option>
+      <option value="custom-bilboard-2018">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 2018</option>
+      <option value="custom-bilboard-2017">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 2017</option>
+      <option value="custom-bilboard-2016">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 2016</option>
+      <option value="custom-bilboard-2015">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 2015</option>
+      <option value="custom-bilboard-2014">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 2014</option>
+      <option value="custom-bilboard-2013">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 2013</option>
+      <option value="custom-bilboard-2012">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 2012</option>
+      <option value="custom-bilboard-2011">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 2011</option>
+      <option value="custom-bilboard-2010">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 2010</option>
+      <option value="custom-bilboard-2009">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 2009</option>
+      <option value="custom-bilboard-2008">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 2008</option>
+      <option value="custom-bilboard-2007">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 2007</option>
+      <option value="custom-bilboard-2006">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 2006</option>
+      <option value="custom-bilboard-2005">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 2005</option>
+      <option value="custom-bilboard-2004">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 2004</option>
+      <option value="custom-bilboard-2003">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 2003</option>
+      <option value="custom-bilboard-2002">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 2002</option>
+      <option value="custom-bilboard-2001">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 2001</option>
+      <option value="custom-bilboard-2000">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 2000</option>
+      <option value="custom-bilboard-1999">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 1999</option>
+      <option value="custom-bilboard-1998">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 1998</option>
+      <option value="custom-bilboard-1997">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 1997</option>
+      <option value="custom-bilboard-1996">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 1996</option>
+      <option value="custom-bilboard-1995">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 1995</option>
+      <option value="custom-bilboard-1994">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 1994</option>
+      <option value="custom-bilboard-1993">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 1993</option>
+      <option value="custom-bilboard-1992">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 1992</option>
+      <option value="custom-bilboard-1991">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 1991</option>
+      <option value="custom-bilboard-1990">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 1990</option>
+      <option value="custom-bilboard-1989">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 1989</option>
+      <option value="custom-bilboard-1988">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 1988</option>
+      <option value="custom-bilboard-1987">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 1987</option>
+      <option value="custom-bilboard-1986">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 1986</option>
+      <option value="custom-bilboard-1985">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 1985</option>
+      <option value="custom-bilboard-1984">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 1984</option>
+      <option value="custom-bilboard-1983">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 1983</option>
+      <option value="custom-bilboard-1982">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 1982</option>
+      <option value="custom-bilboard-1981">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 1981</option>
+      <option value="custom-bilboard-1980">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 1980</option>
+      <option value="custom-bilboard-1979">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 1979</option>
+      <option value="custom-bilboard-1978">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 1978</option>
+      <option value="custom-bilboard-1977">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 1977</option>
+      <option value="custom-bilboard-1976">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 1976</option>
+      <option value="custom-bilboard-1975">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 1975</option>
+      <option value="custom-bilboard-1974">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 1974</option>
+      <option value="custom-bilboard-1973">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 1973</option>
+      <option value="custom-bilboard-1972">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 1972</option>
+      <option value="custom-bilboard-1971">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 1971</option>
+      <option value="custom-bilboard-1970">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 1970</option>
+      <option value="custom-bilboard-1969">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 1969</option>
+      <option value="custom-bilboard-1968">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 1968</option>
+      <option value="custom-bilboard-1967">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 1967</option>
+      <option value="custom-bilboard-1966">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 1966</option>
 
       <option disabled="disabled">iTUNES :::::::::::::::::::::::::::::::::::::::::::::::</option>
       <option value="https://itunes.apple.com/us/rss/topsongs/limit=25/explicit=true/xml">&nbsp;&nbsp;iTunes Top 25</option>
