--- a/popup.html
+++ b/popup.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="author" content="Mike Rottina">
-  <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900">
   <link rel="stylesheet" href="/lib/popup.css" type="text/css">
   <script src="/lib/jquery.min.js" defer></script>
   <script src="/lib/popup.js" defer></script>
@@ -39,6 +39,7 @@
       <option value="custom-rs-sexiest">&nbsp;&nbsp;Rolling Stone | 10 Sexiest Songs</option>
 
       <option disabled="disabled">BILLBOARD HOT 100 :::::::::::::::::::::::::::</option>
+      <option value="custom-bilboard-2019">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 2019</option>
       <option value="custom-bilboard-2018">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 2018</option>
       <option value="custom-bilboard-2017">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 2017</option>
       <option value="custom-bilboard-2016">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 2016</option>
