Remove broken Amazon, Add 1965, Update 2019

--- a/popup.html
+++ b/popup.html
@@ -16,12 +16,6 @@
 
     <select id="chartselector">
 
-      <option disabled="disabled">AMAZON ::::::::::::::::::::::::::::::::::::::::::::</option>
-      <option value="https://www.amazon.com/gp/rss/bestsellers/dmusic/digital-music-track/">&nbsp;&nbsp;Amazon | Digital Best Sellers</option>
-      <option value="https://www.amazon.com/gp/rss/most-wished-for/music/ref=zg_mw_music_rsslink">&nbsp;&nbsp;Amazon | Most Wished For</option>
-      <option value="https://www.amazon.com/gp/rss/movers-and-shakers/dmusic/digital-music-track/">&nbsp;&nbsp;Amazon | Movers &amp; Shakers</option>
-      <option value="https://www.amazon.com/gp/rss/new-releases/music/ref=zg_bsnr_music_rsslink">&nbsp;&nbsp;Amazon | New Releases</option>
-
       <option disabled="disabled">WEB FAVES :::::::::::::::::::::::::::::::::::::::::</option>
       <option value="http://www.abc.net.au/jazz/xml/ABC%20JazzJustPlayedRSS.xml">&nbsp;&nbsp;ABC Jazz Party Mix</option>
       <option value="http://np.absoluteradio.co.uk/played/abr.rss">&nbsp;&nbsp;Absolute Radio UK | Recently Played</option>
@@ -93,6 +87,7 @@
       <option value="custom-bilboard-1968">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 1968</option>
       <option value="custom-bilboard-1967">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 1967</option>
       <option value="custom-bilboard-1966">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 1966</option>
+      <option value="custom-bilboard-1965">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 1965</option>
 
       <option disabled="disabled">iTUNES :::::::::::::::::::::::::::::::::::::::::::::::</option>
       <option value="https://itunes.apple.com/us/rss/topsongs/limit=25/explicit=true/xml">&nbsp;&nbsp;iTunes Top 25</option>
