--- a/popup.html
+++ b/popup.html
@@ -33,6 +33,7 @@
       <option value="custom-rs-sexiest">&nbsp;&nbsp;Rolling Stone | 10 Sexiest Songs</option>
 
       <option disabled="disabled">BILLBOARD HOT 100 :::::::::::::::::::::::::::</option>
+      <option value="custom-bilboard-2020">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 2020</option>
       <option value="custom-bilboard-2019">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 2019</option>
       <option value="custom-bilboard-2018">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 2018</option>
       <option value="custom-bilboard-2017">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 2017</option>
