--- a/popup.html
+++ b/popup.html
@@ -17,11 +17,9 @@
     <select id="chartselector">
 
       <option disabled="disabled">WEB FAVES :::::::::::::::::::::::::::::::::::::::::</option>
-      <option value="http://www.abc.net.au/jazz/xml/ABC%20JazzJustPlayedRSS.xml">&nbsp;&nbsp;ABC Jazz Party Mix</option>
-      <option value="http://np.absoluteradio.co.uk/played/abr.rss">&nbsp;&nbsp;Absolute Radio UK | Recently Played</option>
-      <option value="https://feeds.feedburner.com/indieshuffle?format=xml">&nbsp;&nbsp;Indie Shuffle | Singles</option>
       <option value="https://pitchfork.com/rss/reviews/best/tracks/">&nbsp;&nbsp;Pitchfork Media | Best New Tracks</option>
       <option value="https://pitchfork.com/rss/reviews/best/reissues/">&nbsp;&nbsp;Pitchfork Media | Best New Reissues</option>
+      <option value="https://feeds.feedburner.com/indieshuffle?format=xml">&nbsp;&nbsp;Indie Shuffle | Singles</option>
       <option value="custom-playlist-prince">&nbsp;&nbsp;Unique Playlist | Prince's &lsquo;New Girl&rsquo; Party Mix</option><!-- https://boingboing.net/2016/04/25/listen-to-princes-personal-p.html -->
 
       <option disabled="disabled">ROLLING STONE :::::::::::::::::::::::::</option>
@@ -33,6 +31,8 @@
       <option value="custom-rs-sexiest">&nbsp;&nbsp;Rolling Stone | 10 Sexiest Songs</option>
 
       <option disabled="disabled">BILLBOARD HOT 100 :::::::::::::::::::::::::::</option>
+      <option value="custom-bilboard-2022">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 2022</option>
+      <option value="custom-bilboard-2021">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 2021</option>
       <option value="custom-bilboard-2020">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 2020</option>
       <option value="custom-bilboard-2019">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 2019</option>
       <option value="custom-bilboard-2018">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 2018</option>
