Add 2023, Update jQuery

--- a/popup.html
+++ b/popup.html
@@ -31,6 +31,7 @@
       <option value="custom-rs-sexiest">&nbsp;&nbsp;Rolling Stone | 10 Sexiest Songs</option>
 
       <option disabled="disabled">BILLBOARD HOT 100 :::::::::::::::::::::::::::</option>
+      <option value="custom-bilboard-2023">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 2023</option>
       <option value="custom-bilboard-2022">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 2022</option>
       <option value="custom-bilboard-2021">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 2021</option>
       <option value="custom-bilboard-2020">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 2020</option>
