--- a/popup.html
+++ b/popup.html
@@ -12,23 +12,17 @@
   <header>
     <h1>B<span class="o1">o</span><span class="o2">o</span>mbastic<span class="o2"> !</span></h1>
     <h2> </h2>
-    <div id="visualisation" class="hideIfNoApi"><div style="left: 0%; height: 0"></div><div style="left: 3.125%; height: 0"></div><div style="left: 6.25%; height: 0"></div><div style="left: 9.375%; height: 0"></div><div style="left: 12.5%; height: 0"></div><div style="left: 15.625%; height: 0"></div><div style="left: 18.75%; height: 0"></div><div style="left: 21.875%; height: 0"></div><div style="left: 25%; height: 0"></div><div style="left: 28.125%; height: 0"></div><div style="left: 31.25%; height: 0"></div><div style="left: 34.375%; height: 0"></div><div style="left: 37.5%; height: 0"></div><div style="left: 40.625%; height: 0"></div><div style="left: 43.75%; height: 0"></div><div style="left: 46.875%; height: 0"></div><div style="left: 50%; height: 0"></div><div style="left: 53.125%; height: 0"></div><div style="left: 56.25%; height: 0"></div><div style="left: 59.375%; height: 0"></div><div style="left: 62.5%; height: 0"></div><div style="left: 65.625%; height: 0"></div><div style="left: 68.75%; height: 0"></div><div style="left: 71.875%; height: 0"></div><div style="left: 75%; height: 0"></div><div style="left: 78.125%; height: 0"></div><div style="left: 81.25%; height: 0"></div><div style="left: 84.375%; height: 0"></div><div style="left: 87.5%; height: 0"></div><div style="left: 90.625%; height: 0"></div><div style="left: 93.75%; height: 0"></div><div style="left: 96.875%; height: 0"></div></div>
+    <div id="visualisation" class="hideIfNoApi">
+      <div style="left: 0%; height: 0"></div><div style="left: 3.125%; height: 0"></div><div style="left: 6.25%; height: 0"></div><div style="left: 9.375%; height: 0"></div><div style="left: 12.5%; height: 0"></div><div style="left: 15.625%; height: 0"></div><div style="left: 18.75%; height: 0"></div><div style="left: 21.875%; height: 0"></div><div style="left: 25%; height: 0"></div><div style="left: 28.125%; height: 0"></div><div style="left: 31.25%; height: 0"></div><div style="left: 34.375%; height: 0"></div><div style="left: 37.5%; height: 0"></div><div style="left: 40.625%; height: 0"></div><div style="left: 43.75%; height: 0"></div><div style="left: 46.875%; height: 0"></div><div style="left: 50%; height: 0"></div><div style="left: 53.125%; height: 0"></div><div style="left: 56.25%; height: 0"></div><div style="left: 59.375%; height: 0"></div><div style="left: 62.5%; height: 0"></div><div style="left: 65.625%; height: 0"></div><div style="left: 68.75%; height: 0"></div><div style="left: 71.875%; height: 0"></div><div style="left: 75%; height: 0"></div><div style="left: 78.125%; height: 0"></div><div style="left: 81.25%; height: 0"></div><div style="left: 84.375%; height: 0"></div><div style="left: 87.5%; height: 0"></div><div style="left: 90.625%; height: 0"></div><div style="left: 93.75%; height: 0"></div><div style="left: 96.875%; height: 0"></div>
+    </div>
 
     <select id="chartselector">
 
       <option disabled="disabled">WEB FAVES :::::::::::::::::::::::::::::::::::::::::</option>
-      <option value="https://pitchfork.com/rss/reviews/best/tracks/">&nbsp;&nbsp;Pitchfork Media | Best New Tracks</option>
-      <option value="https://pitchfork.com/rss/reviews/best/reissues/">&nbsp;&nbsp;Pitchfork Media | Best New Reissues</option>
-      <option value="https://feeds.feedburner.com/indieshuffle?format=xml">&nbsp;&nbsp;Indie Shuffle | Singles</option>
+      <option value="https://feeds.feedburner.com/indieshuffle?format=xml">&nbsp;&nbsp;Indie Shuffle</option>
+      <option value="https://pitchfork.com/rss/reviews/best/tracks/">&nbsp;&nbsp;Pitchfork | Best New Tracks</option>
+      <option value="https://pitchfork.com/rss/reviews/best/reissues/">&nbsp;&nbsp;Pitchfork | Best New Reissues</option>
       <option value="custom-playlist-prince">&nbsp;&nbsp;Unique Playlist | Prince's &lsquo;New Girl&rsquo; Party Mix</option><!-- https://boingboing.net/2016/04/25/listen-to-princes-personal-p.html -->
-
-      <option disabled="disabled">ROLLING STONE :::::::::::::::::::::::::</option>
-      <option value="custom-rs-summersongs-1970s">&nbsp;&nbsp;Rolling Stone | 1970s | 20 Best Summer Songs</option>
-      <option value="custom-rs-pop-1984">&nbsp;&nbsp;Rolling Stone | 1984 | 20 Best Songs</option>
-      <option value="custom-rs-best-2000s">&nbsp;&nbsp;Rolling Stone | 2000s | 20 Best Songs</option>
-      <option value="custom-rs-country-saddest">&nbsp;&nbsp;Rolling Stone | 12 Saddest Country Songs</option>
-      <option value="custom-rs-hiphop-greatest">&nbsp;&nbsp;Rolling Stone | 10 Greatest Hip-Hop Songs</option>
-      <option value="custom-rs-sexiest">&nbsp;&nbsp;Rolling Stone | 10 Sexiest Songs</option>
 
       <option disabled="disabled">BILLBOARD HOT 100 :::::::::::::::::::::::::::</option>
       <option value="custom-bilboard-2023">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 2023</option>
@@ -90,6 +84,7 @@
       <option value="custom-bilboard-1967">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 1967</option>
       <option value="custom-bilboard-1966">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 1966</option>
       <option value="custom-bilboard-1965">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 1965</option>
+      <option value="custom-bilboard-1964">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 1964</option>
 
       <option disabled="disabled">iTUNES :::::::::::::::::::::::::::::::::::::::::::::::</option>
       <option value="https://itunes.apple.com/us/rss/topsongs/limit=25/explicit=true/xml">&nbsp;&nbsp;iTunes Top 25</option>
@@ -119,6 +114,14 @@
       <option value="https://itunes.apple.com/us/rss/topsongs/limit=25/genre=24/explicit=true/xml">&nbsp;&nbsp;iTunes Top 25 | Raggae</option>
       <option value="https://itunes.apple.com/us/rss/topsongs/limit=25/genre=21/explicit=true/xml">&nbsp;&nbsp;iTunes Top 25 | Rock</option>
       <option value="https://itunes.apple.com/us/rss/topsongs/limit=25/genre=19/explicit=true/xml">&nbsp;&nbsp;iTunes Top 25 | World</option>
+
+      <option disabled="disabled">ROLLING STONE :::::::::::::::::::::::::</option>
+      <option value="custom-rs-summersongs-1970s">&nbsp;&nbsp;Rolling Stone | 1970s | 20 Best Summer Songs</option>
+      <option value="custom-rs-pop-1984">&nbsp;&nbsp;Rolling Stone | 1984 | 20 Best Songs</option>
+      <option value="custom-rs-best-2000s">&nbsp;&nbsp;Rolling Stone | 2000s | 20 Best Songs</option>
+      <option value="custom-rs-country-saddest">&nbsp;&nbsp;Rolling Stone | 12 Saddest Country Songs</option>
+      <option value="custom-rs-hiphop-greatest">&nbsp;&nbsp;Rolling Stone | 10 Greatest Hip-Hop Songs</option>
+      <option value="custom-rs-sexiest">&nbsp;&nbsp;Rolling Stone | 10 Sexiest Songs</option>
 
     </select>
   </header>
